envoy-access-log/envoy.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          protocol: "TCP"
          address: "0.0.0.0"
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: auto
                stat_prefix: "ingress_http"
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains:
                        - "*"
                      routes:
                        - match:
                            path: "/status/418"
                          route:
                            cluster: httpbin
                          typed_per_filter_config:
                            envoy.filters.http.lua:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute
                              name: set-teapot.lua
                        - match:
                            prefix: "/"
                          route:
                            cluster: httpbin
                          typed_per_filter_config:
                            envoy.filters.http.lua:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute
                              name: clean-teapot.lua
                http_filters:
                  - name: envoy.filters.http.lua
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
                      inline_code: |
                        function envoy_on_request(request_handle)
                          -- do something
                        end
                      source_codes:
                        set-teapot.lua:
                          inline_string: |
                            function envoy_on_request(request_handle)
                             request_handle:streamInfo():dynamicMetadata():set("my-filter", "status", "teapot")
                            end
                        clean-teapot.lua:
                          inline_string: |
                            function envoy_on_request(request_handle)
                             request_handle:streamInfo():dynamicMetadata():set("my-filter", "status", "")
                            end
                  - name: envoy.router
                access_log:
                  - name: stdout-4xx-5xx
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: /dev/stdout
                      log_format:
                        json_format:
                          protocol: "%PROTOCOL%"
                          response_duration: "%RESPONSE_DURATION%"
                          response_code: "%RESPONSE_CODE%"
                          path: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
                          method: "%REQ(:METHOD)%"
                          response_flags: "%RESPONSE_FLAGS%"
                          start_time: "%START_TIME%"
                          response_code_details: "%RESPONSE_CODE_DETAILS%"
                          remote_address: "%DOWNSTREAM_REMOTE_ADDRESS_WITHOUT_PORT%"
                          x_forwarded_for: "%REQ(X-FORWARDED-FOR)%"
                          x_request_id: "%REQ(X-REQUEST-ID)%"
                          x_b3_traceid: "%REQ(X-B3-TRACEID)%"
                          upstream_host: "%UPSTREAM_HOST%"
                          dynamic_metadata: "%DYNAMIC_METADATA(my-filter:status)%"
                    filter:
                      or_filter:
                        filters:
                          - metadata_filter:
                              matcher:
                                filter: "my-filter"
                                path:
                                  - key: "status"
                                value:
                                  string_match:
                                    exact: "teapot"
                          - status_code_filter:
                              comparison:
                                op: GE
                                value:
                                  default_value: 500
                                  runtime_key: access_log.access_error.status
                          - status_code_filter:
                              comparison:
                                op: EQ
                                value:
                                  default_value: 401
                                  runtime_key: access_log.access_error.status
                          - status_code_filter:
                              comparison:
                                op: EQ
                                value:
                                  default_value: 403
                                  runtime_key: access_log.access_error.status
                          - status_code_filter:
                              comparison:
                                op: EQ
                                value:
                                  default_value: 429
                                  runtime_key: access_log.access_error.status

  clusters:
    - name: httpbin
      connect_timeout: "0.25s"
      common_http_protocol_options:
        idle_timeout: "4s"
      type: "LOGICAL_DNS"
      dns_lookup_family: "V4_ONLY"
      load_assignment:
        cluster_name: "service"
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: "httpbin"
                      port_value: 80
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
